force-app/main/default/objects/IT_Hardware_Asset__c/IT_Hardware_Asset__c.object-meta.xml
<CustomObject>
    <description>Hardware assets in inventory.</description>
    <label>IT Hardware Asset</label>
    <nameField>
        <displayFormat>HW-{00000}</displayFormat>
        <label>IT Hardware Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Hardware Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>