force-app/main/default/objects/IT_Hardware_Asset__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>Acquisition date of the hardware asset.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date asset was acquired.</inlineHelpText>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>