force-app/main/default/objects/IT_Hardware_Asset__c/fields/Asset_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tag_Number__c</fullName>
    <description>Asset tag number of this device</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the asset tag number of this device</inlineHelpText>
    <label>Asset Tag Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>