force-app/main/default/objects/IT_Hardware_Asset__c/fields/Bit_Level__c.field-meta.xml
<CustomField>
    <fullName>Bit_Level__c</fullName>
    <description>Bit level of server</description>
    <inlineHelpText>Bit level of server</inlineHelpText>
    <label>Bit Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>