force-app/main/default/objects/IT_Hardware_Asset__c/fields/Cluster_Name__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Name__c</fullName>
    <description>The Cluster Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Cluster Name.</inlineHelpText>
    <label>Cluster Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>