force-app/main/default/objects/IT_Hardware_Asset__c/fields/CPU_Type__c.field-meta.xml
<CustomField>
    <fullName>CPU_Type__c</fullName>
    <description>CPU type of this machine</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CPU type of this machine</inlineHelpText>
    <label>CPU Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>