force-app/main/default/objects/IT_Hardware_Asset__c/fields/Date_Built__c.field-meta.xml
<CustomField>
    <fullName>Date_Built__c</fullName>
    <description>Date machine was built out</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date machine was built out</inlineHelpText>
    <label>Date Built</label>
    <type>Date</type>
</CustomField>