force-app/main/default/objects/IT_Hardware_Asset__c/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <formula>Purchase_Order__r.SCMC__Purchase_Order_Date__c</formula>
    <inlineHelpText>Date the order was placed.</inlineHelpText>
    <label>Date Purchased</label>
    <type>Date</type>
</CustomField>