force-app/main/default/objects/IT_Hardware_Asset__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <description>Is device physical or virtual?</description>
    <inlineHelpText>Is device physical or virtual?</inlineHelpText>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>