force-app/main/default/objects/IT_Hardware_Asset__c/fields/HardwareType__c.field-meta.xml
<CustomField>
    <fullName>HardwareType__c</fullName>
    <formula>TEXT( Product_ID__r.Hardware_Type__c )</formula>
    <label>Hardware Type</label>
    <type>Text</type>
</CustomField>