force-app/main/default/objects/IT_Hardware_Asset__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>The name of the machines that hosts this device.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the machines that hosts this device.</inlineHelpText>
    <label>Host</label>
    <length>25</length>
    <type>Text</type>
</CustomField>