force-app/main/default/objects/IT_Hardware_Asset__c/fields/IP_Address_2__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_2__c</fullName>
    <description>The IP address of this machine.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The IP address of this machine.</inlineHelpText>
    <label>IP Address 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>