force-app/main/default/objects/IT_Hardware_Asset__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Salesforce.com Change Request: NICC-013775

Service line number associated with this account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Service line number associated with this account</inlineHelpText>
    <label>Line Number</label>
    <type>Phone</type>
</CustomField>