force-app/main/default/objects/IT_Hardware_Asset__c/fields/Line_Usage__c.field-meta.xml
<CustomField>
    <fullName>Line_Usage__c</fullName>
    <description>Salesforce.com Change Request: NICC-013775

Purpose for this line/device</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Purpose for this line/device</inlineHelpText>
    <label>Line Usage</label>
    <length>64</length>
    <type>Text</type>
</CustomField>