force-app/main/default/objects/IT_Hardware_Asset__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>The manufacturer of the hardware model.</description>
    <formula>TEXT(Product_ID__r.Manufacturer__c)</formula>
    <inlineHelpText>The manufacturer of the hardware model.</inlineHelpText>
    <label>Manufacturer</label>
    <type>Text</type>
</CustomField>