force-app/main/default/objects/IT_Hardware_Asset__c/fields/Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Description__c</fullName>
    <description>The description of the hardware model name.</description>
    <formula>Product_ID__r.Model_Description__c</formula>
    <inlineHelpText>The description of the hardware model name.</inlineHelpText>
    <label>Model Description</label>
    <type>Text</type>
</CustomField>