force-app/main/default/objects/IT_Hardware_Asset__c/fields/NI_Department__c.field-meta.xml
<CustomField>
    <fullName>NI_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department to which this device is assigned</description>
    <inlineHelpText>Department to which this device is assigned</inlineHelpText>
    <label>NI Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NI_Departments__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NI_Departments__c</referenceTo>
    <relationshipLabel>IT Hardware Assets</relationshipLabel>
    <relationshipName>IT_Hardware_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>