force-app/main/default/objects/IT_Hardware_Asset__c/fields/NLB_Address__c.field-meta.xml
<CustomField>
    <fullName>NLB_Address__c</fullName>
    <description>The Network Load Balancer address.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Network Load Balancer address.</inlineHelpText>
    <label>NLB Address</label>
    <length>25</length>
    <type>Text</type>
</CustomField>