force-app/main/default/objects/IT_Hardware_Asset__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Salesforce.com NICC 017896.  Notes on the asset record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Managed by Ron Sevigny and Lisa Ertle.</inlineHelpText>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>