force-app/main/default/objects/IT_Hardware_Asset__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <description>Operating system installed on this machine</description>
    <inlineHelpText>Operating system installed on this machine</inlineHelpText>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>OSX 10.7</fullName>
            </value>
            <value>
                <fullName>VMWare ESX</fullName>
            </value>
            <value>
                <fullName>VMWare ESXi</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 2000</fullName>
            </value>
            <value>
                <fullName>Windows 2000 Workstation Sp3</fullName>
            </value>
            <value>
                <fullName>Windows 7</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Enterprise R2 Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Enterprise R2 Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Enterprise Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Enterprise Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Standard R2 Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Standard R2 Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Standard Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Standard Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Web Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003 Web Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Enterprise R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Enterprise R2 Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Enterprise Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Enterprise Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Standard R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Standard R2 Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Standard Sp1</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Standard Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Web R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 Web Sp2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012 Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>