force-app/main/default/objects/IT_Hardware_Asset__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the Product ID/model name of the hardware.</description>
    <inlineHelpText>This is the Product ID/model name of the hardware.</inlineHelpText>
    <label>IT Hardware Model Name</label>
    <referenceTo>IT_Hardware_Model__c</referenceTo>
    <relationshipLabel>IT Hardware Assets</relationshipLabel>
    <relationshipName>IT_Hardware_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>