force-app/main/default/objects/IT_Hardware_Asset__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SCMC__Purchase_Order_Line_Item__c.SCMC__Purchase_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Purchase_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SCMC__Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>IT Hardware Assets</relationshipLabel>
    <relationshipName>IT_Hardware_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>