force-app/main/default/objects/IT_Hardware_Asset__c/fields/Replacement_Model__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Model</label>
    <referenceTo>IT_Hardware_Model__c</referenceTo>
    <relationshipLabel>Replacement For</relationshipLabel>
    <relationshipName>IT_Hardware_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>