force-app/main/default/objects/IT_Hardware_Asset__c/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <description>Reporting area for enterprise assets</description>
    <formula>IF (ISPICKVAL(Asset_Location__c, &quot;Disposed&quot;), &quot;&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Technician Desk&quot;), &quot;&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Walnut Creek Office&quot;), &quot;Portsmouth Enterprise&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Celebration Office&quot;), &quot;Portsmouth Enterprise&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Miami Office&quot;), &quot;Portsmouth Enterprise&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Singapore Office&quot;), &quot;AP&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Shanghai Office&quot;), &quot;AP&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;London Office&quot;), &quot;EMEA&quot;, 
IF (ISPICKVAL(Asset_Location__c, &quot;Atlanta Office&quot;), &quot;Portsmouth Enterprise&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; NI_Department__r.Name = &quot;300&quot;, 
&quot;Sales&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; NI_Department__r.Name = &quot;400&quot;, 
&quot;Support&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; NI_Department__r.Name = &quot;720&quot;, 
&quot;QA&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; OR(NI_Department__r.Name = &quot;711&quot;,NI_Department__r.Name = &quot;719&quot;), 
&quot;R&amp;D&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; OR(NI_Department__r.Name = &quot;510&quot;,NI_Department__r.Name = &quot;520&quot;,NI_Department__r.Name = &quot;530&quot;,NI_Department__r.Name = &quot;560&quot;,NI_Department__r.Name = &quot;601&quot;,NI_Department__r.Name = &quot;602&quot;,NI_Department__r.Name = &quot;603&quot;,NI_Department__r.Name = &quot;604&quot;,NI_Department__r.Name = &quot;900&quot;,NI_Department__r.Name = &quot;940&quot;,NI_Department__r.Name = &quot;950&quot;,NI_Department__r.Name = &quot;550&quot;,NI_Department__r.Name = &quot;540&quot;,NI_Department__r.Name = &quot;420&quot;), 
&quot;Client Services&quot;, 

IF (ISPICKVAL(Asset_Location__c, &quot;Portsmouth Office&quot;) &amp;&amp; OR(NI_Department__r.Name = &quot;100&quot;,NI_Department__r.Name = &quot;105&quot;,NI_Department__r.Name = &quot;110&quot;,NI_Department__r.Name = &quot;120&quot;,NI_Department__r.Name = &quot;130&quot;,NI_Department__r.Name = &quot;160&quot;,NI_Department__r.Name = &quot;350&quot;,NI_Department__r.Name = &quot;718&quot;,NI_Department__r.Name = &quot;724&quot;,NI_Department__r.Name = &quot;729&quot;), 
&quot;Portsmouth Enterprise&quot;, &quot;Problem&quot; 
)))))))))))))))</formula>
    <inlineHelpText>Which reporting category does this asset belong to?</inlineHelpText>
    <label>Reporting Group</label>
    <type>Text</type>
</CustomField>