force-app/main/default/objects/IT_Hardware_Asset__c/fields/Retirement_Date__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Date__c</fullName>
    <description>Date this asset was retired</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter date the asset was retired.  Note that this field affects inventory and financial reporting!</inlineHelpText>
    <label>Retirement Date</label>
    <type>Date</type>
</CustomField>