force-app/main/default/objects/IT_Hardware_Asset__c/fields/Secondary_Machine__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Machine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the asset is a secondary machine.</description>
    <label>Secondary Machine</label>
    <type>Checkbox</type>
</CustomField>