force-app/main/default/objects/IT_Hardware_Asset__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <formula>TEXT(Product_ID__r.Series__c)</formula>
    <label>Series</label>
    <type>Text</type>
</CustomField>