force-app/main/default/objects/IT_Hardware_Asset__c/fields/Server_Role__c.field-meta.xml
<CustomField>
    <fullName>Server_Role__c</fullName>
    <description>Role assigned to this machine</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Role assigned to this machine</inlineHelpText>
    <label>Server Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>