force-app/main/default/objects/IT_Hardware_Asset__c/fields/SIM_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>SIM_Card_ID__c</fullName>
    <description>Salesforce.com Change Request: NICC-013775

SIM Card ID number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SIM Card ID number</inlineHelpText>
    <label>SIM Card ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>