force-app/main/default/objects/IT_Hardware_Asset__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of this asset</description>
    <inlineHelpText>Status of this asset</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available Inventory</fullName>
            </value>
            <value>
                <fullName>Currently Being Configured</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>FRU</fullName>
            </value>
            <value>
                <fullName>Needs Repair</fullName>
            </value>
            <value>
                <fullName>Reserved Inventory</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Lifecycle Transition</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>