force-app/main/default/objects/IT_Hardware_Asset__c/fields/Temporary_Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Model_Description__c</fullName>
    <description>Temporary field for model description to cross reference with exisiting models in IT Hardware Model object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Temporary Model Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>