force-app/main/default/objects/IT_Hardware_Asset__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User assigned to hardware asset ID.</description>
    <inlineHelpText>User assigned to hardware asset ID.</inlineHelpText>
    <label>Custodian</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>IT_Hardware_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>