force-app/main/default/objects/IT_Hardware_Asset__c/fields/Virtual_SQL_IP__c.field-meta.xml
<CustomField>
    <fullName>Virtual_SQL_IP__c</fullName>
    <description>IP address of the virtual SQL instance</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>IP address of the virtual SQL instance</inlineHelpText>
    <label>Virtual SQL IP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>