force-app/main/default/objects/IT_Hardware_Asset__c/fields/Virtual_SQL_Name__c.field-meta.xml
<CustomField>
    <fullName>Virtual_SQL_Name__c</fullName>
    <description>Name of the virtual SQL instance</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the virtual SQL instance</inlineHelpText>
    <label>Virtual SQL Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>