force-app/main/default/objects/IT_Hardware_Asset__c/fields/Warranty_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Term__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Number of years the warranty is valid for</inlineHelpText>
    <label>Warranty Term (years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>