force-app/main/default/objects/IT_Hardware_Asset__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <description>The type of warranty that was purchased with hardware asset.</description>
    <inlineHelpText>The type of warranty that was purchased with hardware asset.</inlineHelpText>
    <label>Warranty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 year return to vendor</fullName>
            </value>
            <value>
                <fullName>24x7x4</fullName>
            </value>
            <value>
                <fullName>24x7x6</fullName>
            </value>
            <value>
                <fullName>24x7xNBD</fullName>
            </value>
            <value>
                <fullName>3 year AppleCare (carry in)</fullName>
            </value>
            <value>
                <fullName>3 year mail-in</fullName>
            </value>
            <value>
                <fullName>3 year NBD on-site</fullName>
            </value>
            <value>
                <fullName>9x5xNBD</fullName>
            </value>
            <value>
                <fullName>Custom (see notes section)</fullName>
            </value>
            <value>
                <fullName>No warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>