force-app/main/default/objects/IT_Hardware_Asset__c/recordTypes/Enterprise_Hardware.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Hardware</fullName>
    <active>true</active>
    <description>Hardware or device which is used or shared by multiple users, teams, or departments</description>
    <label>Enterprise Hardware</label>
</RecordType>