force-app/main/default/objects/IT_Hardware_Asset__c/recordTypes/Mobile_Device.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Device</fullName>
    <active>true</active>
    <label>Mobile Device</label>
</RecordType>