force-app/main/default/objects/IT_Hardware_Asset__c/recordTypes/OnDemand_Hosted.recordType-meta.xml
<RecordType>
    <fullName>OnDemand_Hosted</fullName>
    <active>true</active>
    <description>OnDemand Hosted asset inventory.</description>
    <label>OnDemand Hosted</label>
</RecordType>