force-app/main/default/objects/IT_Hardware_Asset__c/recordTypes/User_Hardware.recordType-meta.xml
<RecordType>
    <fullName>User_Hardware</fullName>
    <active>true</active>
    <description>Hardware device which can be assigned to a specific user</description>
    <label>User Hardware</label>
</RecordType>