force-app/main/default/objects/IT_Hardware_Asset__c/validationRules/Must_Specify_Charity.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Specify_Charity</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
   ISBLANK(Charity__c),
   OR(
      ISPICKVAL(Retirement_Method__c, &quot;Donated&quot;),
      ISPICKVAL(Retirement_Method__c, &quot;User Purchase&quot;)
   )
)</errorConditionFormula>
    <errorDisplayField>Charity__c</errorDisplayField>
    <errorMessage>If the Retirement Method is either &quot;User Purchase&quot; or &quot;Donated&quot;, then you must specify the organization that the asset was donated to, or the charity that was provided a donation in order for a user to &quot;purchase&quot; the asset.</errorMessage>
</ValidationRule>