force-app/main/default/objects/IT_Hardware_Asset__c/validationRules/Physical_Enterprise_Assets_Need_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Enterprise_Assets_Need_Details</fullName>
    <active>true</active>
    <description>When an enterprise asset is a physical asset, then serial number, model, PO number, acquisition date, warranty type, and warranty expiration must be populated.</description>
    <errorConditionFormula>AND (
    RecordType.Name != &quot;OnDemand Hosted&quot;,
    ISPICKVAL(Deployment_Type__c , &quot;Physical&quot;),
    OR (
        ISBLANK(Serial_Number__c), 
        ISBLANK(Product_ID__c), 
        ISBLANK(Purchase_Order__c),  
        ISBLANK(TEXT(Warranty_Type__c)),  
        ISBLANK(Warranty_Expires__c )
    )
)</errorConditionFormula>
    <errorMessage>For physical assets, the Model, Serial Number, Purchase Order, Warranty Type, and Warranty Expiration must be entered in order to be able to save the record.</errorMessage>
</ValidationRule>