force-app/main/default/objects/IT_Hardware_Asset__c/validationRules/Retired_Asset_requires_Retirement_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Retired_Asset_requires_Retirement_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Retired&quot; ),
  OR(HardwareType__c = &quot;Laptop&quot;, HardwareType__c = &quot;Workstation&quot;),
  ISBLANK(TEXT(Retirement_Method__c))
)</errorConditionFormula>
    <errorDisplayField>Retirement_Method__c</errorDisplayField>
    <errorMessage>Please select a Retirement Method.</errorMessage>
</ValidationRule>