force-app/main/default/objects/IT_Hardware_Asset__c/listViews/Active_Assets_Breda.listView-meta.xml
<ListView>
    <fullName>Active_Assets_Breda</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
    <columns>NAME</columns>
    <columns>Serial_Number__c</columns>
    <columns>Product_ID__c</columns>
    <columns>Model_Description__c</columns>
    <columns>Temporary_Model_Description__c</columns>
    <columns>Status__c</columns>
    <columns>HardwareType__c</columns>
    <columns>Hardware_Type__c</columns>
    <columns>Asset_Location__c</columns>
    <columns>User__c</columns>
    <columns>Custodian_Location__c</columns>
    <columns>Custodian_Department__c</columns>
    <columns>NI_Department__c</columns>
    <columns>Model_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hardware_Type__c</field>
        <operation>equals</operation>
        <value>Laptop,Workstation</value>
    </filters>
    <filters>
        <field>HardwareType__c</field>
        <operation>equals</operation>
        <value>Laptop,Workstation</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Marco</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IT_Hardware_Asset__c.User_Hardware</value>
    </filters>
    <filters>
        <field>Secondary_Machine__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Product_ID__c</field>
        <operation>equals</operation>
        <value>Hewlett-Packard</value>
    </filters>
    <label>Active Assets (Breda)</label>
</ListView>