force-app/main/default/objects/IT_Hardware_Asset__c/listViews/Active_Assets_Not_Breda.listView-meta.xml
<ListView>
    <fullName>Active_Assets_Not_Breda</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_ID__c</columns>
    <columns>HardwareType__c</columns>
    <columns>Hardware_Type__c</columns>
    <columns>Asset_Location__c</columns>
    <columns>User__c</columns>
    <columns>Custodian_Location__c</columns>
    <columns>Custodian_Department__c</columns>
    <columns>NI_Department__c</columns>
    <columns>Machine_Name__c</columns>
    <columns>Deployment_Type__c</columns>
    <columns>Model_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hardware_Type__c</field>
        <operation>equals</operation>
        <value>Laptop,Workstation</value>
    </filters>
    <filters>
        <field>HardwareType__c</field>
        <operation>equals</operation>
        <value>Laptop,Workstation</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </filters>
    <label>Recently Added</label>
</ListView>